--- a/config.toml
+++ b/config.toml
@@ -1,91 +1,156 @@
-baseurl = "http://localhost:1313/"
-uglyurls = true
-relativeURLs=false
-languageCode = "zh-cn"
-title = "ServiceMesh学习笔记"
-theme = "hugo-material-docs"
-metadataformat = "yaml"
-canonifyurls = true
-preserveTaxonomyNames = true
-disablePathToLower = true
+baseURL = "/"
+title = "Servicemesh学习笔记"
 
-# Enable Google Analytics by entering your tracking id
-googleAnalytics = "c7442f5794ea2abb71c6ff05dc0b8779"
+enableRobotsTXT = true
+uglyurls = true
+
+# Hugo allows theme composition (and inheritance). The precedence is from left to right.
+theme = ["docsy"]
+
+# Will give values to .Lastmod etc.
+enableGitInfo = false
+
+# Language settings
+contentDir = "content"
+defaultContentLanguage = "zh"
+defaultContentLanguageInSubdir = false
+# Useful when translating.
+enableMissingTranslationPlaceholders = true
+
+disableKinds = ["taxonomy", "taxonomyTerm"]
+
+rss_sections = ["docs"]
+
+# Configure how URLs look like per section.
+[permalinks]
+blog = "/:section/:year/:month/:day/:slug/"
+
+
+# Image processing configuration.
+[imaging]
+resampleFilter = "CatmullRom"
+quality = 75
+anchor = "smart"
+
+[services]
+[services.googleAnalytics]
+# Comment out the next line to disable GA tracking. Also disables the feature described in [params.ui.feedback].
+id = "G-4BVWTNS4MB"
+
+# Language configuration
+
+[languages]
+[languages.zh]
+title = "Servicemesh学习笔记"
+description = "Servicemesh学习笔记"
+languageName ="中文"
+contentDir = "content"
+time_format_default = "2006-01-02"
+time_format_blog = "2006-01-02"
+
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+  [markup.highlight]
+      # See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
+      style = "tango"
+      # Uncomment if you want your chosen highlight style used for code blocks without a specified language
+      guessSyntax = "false"
+
+# Everything below this are Site Params
+
+# Comment out if you don't want the "print entire section" link enabled.
+[outputs]
+section = ["HTML", "print"]
 
 [params]
-	# General information
-	author = "敖小剑"
-	keywords = "servicemesh,service mesh,服务网格,学习笔记,敖小剑"
-	description = "ServiceMesh是新兴的微服务架构，被誉为下一代微服务，是云原生技术栈的关键组件之一。"
-	copyright = "版权所有，转载请注明出处"
+copyright = "skyao.io"
+privacy_policy = "https://skyao.io"
 
-	# Repository
-	provider = "GitHub"
-	repo_url = "https://github.com/skyao/learning-servicemesh"
-	
-	version = ""
-	logo = "images/logo.png"
-	favicon = ""
-	
-	permalink = "#"
-    # reward button, comment this to disable it
-    reward = true
+# First one is picked as the Twitter card image if not set on page.
+# images = ["images/project-illustration.png"]
 
-	# Custom assets
-	custom_css = []
-	custom_js  = []
-	
-	# Syntax highlighting theme
-	highlight_css  = ""
-	
-	[params.palette]
-		primary = "red"
-		accent  = "teal"
-	
-	[params.font]
-		text = "Ubuntu"
-		code = "Ubuntu Mono"
+# Menu title if your navbar has a versions selector to access old versions of your site.
+# This menu appears only if you have at least one [params.versions] set.
+version_menu = "Releases"
 
-[social]
-	twitter = ""
-	github  = "skyao"
-	email   = "aoxiaojian@gmail.com"
+# Flag used in the "version-banner" partial to decide whether to display a 
+# banner on every page indicating that this is an archived version of the docs.
+# Set this flag to "true" if you want to display the banner.
+archived_version = false
 
+# The version number for the version of the docs represented in this doc set.
+# Used in the "version-banner" partial to display a version number for the 
+# current doc set.
+version = "0.0"
 
-[[menu.main]]
-	name   = "前言"
-	url    = "/"
-	weight = 1
+# A link to latest version of the docs. Used in the "version-banner" partial to
+# point people to the main doc site.
+url_latest_version = "https://github.com/skyao/learning-servicemesh"
 
-[[menu.main]]
-	name   = "介绍"
-	identifier = "introduction"
-	url    = "/introduction/"
-	weight = 100
+# Repository configuration (URLs for in-page links to opening issues and suggesting changes)
+github_repo = "https://github.com/skyao/learning-servicemesh"
+# An optional link to a related project repo. For example, the sibling repository where your product code lives.
+github_project_repo = "https://github.com/skyao/learning-servicemesh"
 
-[[menu.main]]
-	name   = "Istio"
-	identifier = "istio"
-	url    = "/istio/"
-	weight = 200
+# Specify a value here if your content directory is not in your repo's root directory
+# github_subdir = ""
 
-[[menu.main]]
-	name   = "Traffic Director"
-	identifier = "traffic-director"
-	url    = "/traffic-director/"
-	weight = 1000
+# Google Custom Search Engine ID. Remove or comment out to disable search.
+gcs_engine_id = "ba2ab1a9dbe327b70"
 
-[[menu.main]]
-	name   = "Traffic Director官方资料"
-	identifier = "traffic-director-official"
-	parent = "traffic-director"
-	url    = "/traffic-director/official/"
-	weight = 1010
+# Enable Algolia DocSearch
+algolia_docsearch = false
 
-[blackfriday]
-	smartypants	= true
-	fractions = true
-	smartDashes = true
-	plainIDAnchors = true
+# Enable Lunr.js offline search
+offlineSearch = false
+
+# Enable syntax highlighting and copy buttons on code blocks with Prism
+prism_syntax_highlighting = true
+
+# User interface configuration
+[params.ui]
+# Enable to show the side bar menu in its compact state.
+sidebar_menu_compact = true
+ul_show = 1
+sidebar_menu_foldable = true
+sidebar_cache_limit = 100
+#  Set to true to disable breadcrumb navigation.
+breadcrumb_disable = false
+#  Set to true to hide the sidebar search box (the top nav search box will still be displayed if search is enabled)
+sidebar_search_disable = false
+#  Set to false if you don't want to display a logo (/assets/icons/logo.svg) in the top nav bar
+navbar_logo = true
+# Set to true to disable the About link in the site footer
+footer_about_disable = true
+
+# Adds a H2 section titled "Feedback" to the bottom of each doc. The responses are sent to Google Analytics as events.
+# This feature depends on [services.googleAnalytics] and will be disabled if "services.googleAnalytics.id" is not set.
+# If you want this feature, but occasionally need to remove the "Feedback" section from a single page,
+# add "hide_feedback: true" to the page's front matter.
+[params.ui.feedback]
+enable = false
+# The responses that the user sees after clicking "yes" (the page was helpful) or "no" (the page was not helpful).
+yes = 'Glad to hear it! Please <a href="https://github.com/USERNAME/REPOSITORY/issues/new">tell us how we can improve</a>.'
+no = 'Sorry to hear that. Please <a href="https://github.com/USERNAME/REPOSITORY/issues/new">tell us how we can improve</a>.'
+
+# Adds a reading time to the top of each doc.
+# If you want this feature, but occasionally need to remove the Reading time from a single page, 
+# add "hide_readingtime: true" to the page's front matter
+[params.ui.readingtime]
+enable = false
+
+[params.links]
+# End user relevant links. These will show up on left side of footer and in the community page if you have one.
+
+[params.plantuml]
+enable = true
+theme = "default"
+
+#Set url to plantuml server 
+#default is http://www.plantuml.com/plantuml/svg/
+svg_image_url = "https://www.plantuml.com/plantuml/svg/"
 
 
